--- a/index2.html
+++ b/index2.html
@@ -9,12 +9,11 @@
 <body>
 	
 	
-    <div id="paper-element-styling"></div>
-    <div id="message"></div>
+    <div id="paper"></div>
 
 	<script src="js/JointJS/js/joint.js"></script>
 	<script src="js/JointJS/js/joint.shapes.uml.js"></script>
-        <script src="js/JointJS/js/custom_shapes.js"></script>
+        <script src="js/JointJS/js/circle-constraint.js"></script>
 
         <link rel="stylesheet" href="css/app.css"></link>
         <link rel="stylesheet" href="css/joint.css"></link>
