--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 	
 	
     <div id="paper-element-styling"></div>
-    <div id="message"></div>
+    <div id="readonly_paper"></div>
 
 	<script src="js/JointJS/js/joint.js"></script>
 	<script src="js/JointJS/js/joint.shapes.uml.js"></script>
