--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,9 @@
 	
 	
     <div id="paper-element-styling"></div>
+     <div id="resize_paper"></div>
     <div id="readonly_paper"></div>
+   
 
 	<script src="js/JointJS/js/joint.js"></script>
 	<script src="js/JointJS/js/joint.shapes.uml.js"></script>
